--- a/shop_1/src/main/resources/view/ShopOverview.fxml
+++ b/shop_1/src/main/resources/view/ShopOverview.fxml
@@ -8,55 +8,48 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0"
-            prefWidth="1000.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.bespalov.shop.controller.ProductOverviewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="870.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bespalov.shop.controller.ProductOverviewController">
     <children>
-        <SplitPane dividerPositions="0.8607784431137725" orientation="VERTICAL" prefHeight="670.0" prefWidth="1000.0"
-                   AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                   AnchorPane.topAnchor="0.0">
+        <SplitPane dividerPositions="0.8607784431137725" orientation="VERTICAL" prefHeight="870.0" prefWidth="1200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="428.0" prefWidth="998.0">
                     <children>
-                        <TableView fx:id="productTable" layoutX="399.0" layoutY="157.0" prefHeight="495.2"
-                                   prefWidth="998.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                   AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <TableView fx:id="productTable" layoutX="399.0" layoutY="157.0" prefHeight="495.2" prefWidth="998.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <columns>
-                                <TableColumn fx:id="title" prefWidth="287.20000606775284" text="Title"/>
-                                <TableColumn fx:id="incomingDate" prefWidth="260.0" text="Incoming date"/>
-                                <TableColumn fx:id="serialNumber" prefWidth="210.39996337890625" text="Serial number"/>
-                                <TableColumn fx:id="count" prefWidth="84.800048828125" text="Count"/>
-                                <TableColumn fx:id="condition" prefWidth="156.0001220703125" text="Condition"/>
+                                <TableColumn fx:id="title" prefWidth="287.20000606775284" text="Title" />
+                                <TableColumn fx:id="incomingDate" prefWidth="260.0" text="Incoming date" />
+                                <TableColumn fx:id="serialNumber" prefWidth="210.39996337890625" text="Serial number" />
+                                <TableColumn fx:id="count" prefWidth="84.800048828125" text="Count" />
+                                <TableColumn fx:id="condition" prefWidth="156.0001220703125" text="Condition" />
                             </columns>
                             <columnResizePolicy>
-                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                             </columnResizePolicy>
                         </TableView>
                     </children>
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="142.0" prefWidth="998.0">
                     <children>
-                        <HBox layoutX="664.0" layoutY="1.0" prefHeight="100.0" prefWidth="334.0">
+                        <HBox layoutX="777.0" prefHeight="100.0" prefWidth="407.0">
                             <children>
-                                <Button onAction="#handleSearchPerson" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Search">
+                                <Button fx:id="search" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleSearchPerson" prefWidth="80.0" text="Search">
                                     <HBox.margin>
-                                        <Insets right="20.0" top="30.0"/>
+                                        <Insets right="20.0" top="30.0" />
                                     </HBox.margin>
                                 </Button>
-                                <Button onAction="#handleNewProduct" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Add">
+                                <Button fx:id="add" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleNewProduct" prefWidth="80.0" text="Add">
                                     <HBox.margin>
-                                        <Insets right="20.0" top="30.0"/>
+                                        <Insets right="20.0" top="30.0" />
                                     </HBox.margin>
                                 </Button>
-                                <Button onAction="#handleEditPerson" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Update">
+                                <Button fx:id="update" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleEditPerson" prefWidth="80.0" text="Update">
                                     <HBox.margin>
-                                        <Insets right="20.0" top="30.0"/>
+                                        <Insets right="20.0" top="30.0" />
                                     </HBox.margin>
                                 </Button>
-                                <Button onAction="#remove" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
-                                        text="Delete">
+                                <Button fx:id="remove" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#remove" prefWidth="80.0" text="Delete">
                                     <HBox.margin>
-                                        <Insets right="20.0" top="30.0"/>
+                                        <Insets right="20.0" top="30.0" />
                                     </HBox.margin>
                                 </Button>
                             </children>
