--- a/shop_1/src/main/resources/view/RootLayout.fxml
+++ b/shop_1/src/main/resources/view/RootLayout.fxml
@@ -6,21 +6,23 @@
 <?import javafx.scene.layout.BorderPane?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            onKeyPressed="#pressClose" prefHeight="900.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.121"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bespalov.shop.controller.RootController">
+            onKeyPressed="#pressClose" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.bespalov.shop.controller.RootController">
     <top>
         <MenuBar prefWidth="1000.0" BorderPane.alignment="CENTER">
             <menus>
                 <Menu fx:id="file" mnemonicParsing="false" text="File">
                     <items>
-                        <MenuItem fx:id="newItem" mnemonicParsing="false" onAction="#handleNew" text="New"/>
+                        <MenuItem fx:id="save" onAction="#handleSave" mnemonicParsing="false" text="Save"/>
+                        <MenuItem fx:id="back" onAction="#handleBack" mnemonicParsing="false" text="Back"/>
                         <MenuItem fx:id="close" mnemonicParsing="false" onAction="#close" text="Exit"/>
                     </items>
                 </Menu>
                 <Menu fx:id="help" mnemonicParsing="false" text="Help">
                     <items>
                         <MenuItem fx:id="about" mnemonicParsing="false" onAction="#handleAbout" text="About"/>
-                        <MenuItem fx:id="statistic" mnemonicParsing="false" text="Statistic"/>
+                        <MenuItem fx:id="statistic" mnemonicParsing="false" onAction="#handleStatistic"
+                                  text="Statistic"/>
                     </items>
                 </Menu>
             </menus>
