--- a/shop_1/src/main/resources/view/dialog_window/ProductUpdateOverview.fxml
+++ b/shop_1/src/main/resources/view/dialog_window/ProductUpdateOverview.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bespalov.shop.controller.ProductUpdateDialogController">
+<AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bespalov.shop.controller.ProductUpdateDialogController">
     <children>
         <GridPane layoutX="70.0" layoutY="46.0" prefHeight="410.0" prefWidth="500.0" AnchorPane.bottomAnchor="90.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <columnConstraints>
@@ -71,11 +71,6 @@
                     </GridPane.margin>
                 </TextField>
                 <TextField fx:id="count" GridPane.columnIndex="1" GridPane.rowIndex="3">
-                    <GridPane.margin>
-                        <Insets right="10.0" />
-                    </GridPane.margin>
-                </TextField>
-                <TextField fx:id="condition" GridPane.columnIndex="1" GridPane.rowIndex="4">
                     <GridPane.margin>
                         <Insets right="10.0" />
                     </GridPane.margin>
@@ -140,6 +135,11 @@
                   <Insets top="5.0" />
                </padding>
             </VBox>
+            <ChoiceBox fx:id="condition" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </ChoiceBox>
             </children>
         </GridPane>
         <HBox layoutX="286.0" layoutY="410.0" prefHeight="100.0" prefWidth="200.0">
