--- a/shop_1/src/main/resources/view/ShopOverview.fxml
+++ b/shop_1/src/main/resources/view/ShopOverview.fxml
@@ -5,16 +5,18 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bespalov.shop.controller.ProductOverviewController">
+<AnchorPane onKeyPressed="#close" stylesheets="@../css/DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bespalov.shop.controller.ProductOverviewController">
     <children>
         <SplitPane dividerPositions="0.8607784431137725" orientation="VERTICAL" prefHeight="670.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="428.0" prefWidth="998.0">
                     <children>
-                        <TableView fx:id="productTable" layoutX="399.0" layoutY="157.0" prefHeight="495.2" prefWidth="998.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <TableView fx:id="productTable" layoutX="399.0" layoutY="157.0" prefHeight="495.2" prefWidth="998.4" styleClass="background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <columns>
                                 <TableColumn fx:id="title" prefWidth="287.20000606775284" text="Title" />
                                 <TableColumn fx:id="incomingDate" prefWidth="260.0" text="Incoming date" />
@@ -28,9 +30,9 @@
                         </TableView>
                     </children>
                 </AnchorPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="142.0" prefWidth="998.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="142.0" prefWidth="998.0" styleClass="background-lower">
                     <children>
-                        <HBox layoutX="590.0" layoutY="-5.0" prefHeight="90.0" prefWidth="998.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <HBox layoutX="590.0" layoutY="-5.0" prefHeight="90.0" prefWidth="934.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="64.0" AnchorPane.topAnchor="0.0">
                             <children>
                                 <Button fx:id="search" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleSearchPerson" prefHeight="25.0" prefWidth="87.0" text="Search">
                                     <HBox.margin>
@@ -42,7 +44,7 @@
                                         <Insets left="20.0" top="20.0" />
                                     </HBox.margin>
                                 </Button>
-                                <Button fx:id="update" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleEditPerson" prefWidth="80.0" text="Update">
+                                <Button fx:id="update" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleEditPerson" prefHeight="33.0" prefWidth="111.0" text="Update">
                                     <HBox.margin>
                                         <Insets left="20.0" top="20.0" />
                                     </HBox.margin>
@@ -54,6 +56,10 @@
                                 </Button>
                             </children>
                         </HBox>
+                  <ImageView fx:id="refresh" fitHeight="45.0" fitWidth="49.0" layoutX="934.0" layoutY="14.0" onMouseClicked="#handleRefresh" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="20.0">
+                     <image>
+                        <Image url="@../photo/refresh-470-474986.png" />
+                     </image></ImageView>
                     </children>
                 </AnchorPane>
             </items>
