--- a/shop_1/src/main/resources/view/dialog_window/ProductUpdateOverview.fxml
+++ b/shop_1/src/main/resources/view/dialog_window/ProductUpdateOverview.fxml
@@ -17,8 +17,8 @@
     <children>
         <GridPane layoutX="70.0" layoutY="46.0" prefHeight="410.0" prefWidth="500.0" AnchorPane.bottomAnchor="90.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="245.199951171875" minWidth="10.0" prefWidth="153.199951171875" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="346.800048828125" minWidth="10.0" prefWidth="346.800048828125" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="255.0" minWidth="10.0" prefWidth="165.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="346.800048828125" minWidth="10.0" prefWidth="335.0" />
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -28,7 +28,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Label fx:id="titleName" prefHeight="18.0" prefWidth="48.0" text="Title: ">
+                <Label fx:id="titleName" prefHeight="18.0" prefWidth="130.0" text="Title: ">
                     <font>
                         <Font name="Georgia Italic" size="14.0" />
                     </font>
@@ -60,7 +60,7 @@
                         <Insets left="20.0" />
                     </GridPane.margin>
                 </Label>
-                <TextField fx:id="title" prefHeight="26.0" prefWidth="274.0" GridPane.columnIndex="1">
+                <TextField fx:id="title" prefHeight="31.0" prefWidth="297.0" GridPane.columnIndex="1">
                     <GridPane.margin>
                         <Insets right="10.0" />
                     </GridPane.margin>
@@ -92,7 +92,7 @@
                               <Font name="Corbel" size="14.0" />
                            </font>
                            <HBox.margin>
-                              <Insets />
+                              <Insets top="5.0" />
                            </HBox.margin>
                         </Label>
                               <ChoiceBox fx:id="year" prefWidth="100.0">
@@ -108,6 +108,9 @@
                            <font>
                               <Font name="Corbel" size="14.0" />
                            </font>
+                           <HBox.margin>
+                              <Insets top="5.0" />
+                           </HBox.margin>
                         </Label>
                               <ChoiceBox fx:id="month" prefWidth="100.0">
                            <HBox.margin>
@@ -122,6 +125,9 @@
                            <font>
                               <Font name="Corbel" size="14.0" />
                            </font>
+                           <HBox.margin>
+                              <Insets top="5.0" />
+                           </HBox.margin>
                         </Label>
                               <ChoiceBox fx:id="day" prefWidth="100.0">
                            <HBox.margin>
@@ -142,7 +148,7 @@
             </ChoiceBox>
             </children>
         </GridPane>
-        <HBox layoutX="286.0" layoutY="410.0" prefHeight="100.0" prefWidth="200.0">
+        <HBox layoutX="286.0" layoutY="410.0" prefHeight="100.0" prefWidth="225.0" AnchorPane.rightAnchor="5.0">
             <children>
                 <Button mnemonicParsing="false" onAction="#isOk" prefWidth="100.0" text="OK">
                     <HBox.margin>
