--- a/shop_1/src/main/resources/view/ShopOverview.fxml
+++ b/shop_1/src/main/resources/view/ShopOverview.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<AnchorPane onKeyPressed="#close" stylesheets="@../css/DarkTheme.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bespalov.shop.controller.ProductOverviewController">
+<AnchorPane onKeyPressed="#close" stylesheets="@../css/DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bespalov.shop.controller.ProductOverviewController">
     <children>
         <SplitPane dividerPositions="0.8607784431137725" orientation="VERTICAL" prefHeight="670.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <items>
@@ -16,11 +16,11 @@
                     <children>
                         <TableView fx:id="productTable" layoutX="399.0" layoutY="157.0" prefHeight="495.2" prefWidth="998.4" styleClass="background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <columns>
-                                <TableColumn fx:id="title" prefWidth="287.20000606775284" text="Title" />
-                                <TableColumn fx:id="incomingDate" prefWidth="260.0" text="Incoming date" />
-                                <TableColumn fx:id="serialNumber" prefWidth="210.39996337890625" text="Serial number" />
-                                <TableColumn fx:id="count" prefWidth="84.800048828125" text="Count" />
-                                <TableColumn fx:id="condition" prefWidth="156.0001220703125" text="Condition" />
+                                <TableColumn fx:id="title" minWidth="1.0" prefWidth="204.99998474121094" text="Title" />
+                                <TableColumn fx:id="incomingDate" prefWidth="185.0" text="Incoming date" />
+                                <TableColumn fx:id="serialNumber" prefWidth="305.0" text="Serial number" />
+                                <TableColumn fx:id="count" prefWidth="93.0" text="Count" />
+                                <TableColumn fx:id="condition" prefWidth="306.0" text="Condition" />
                             </columns>
                             <columnResizePolicy>
                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -32,7 +32,7 @@
                     <children>
                         <HBox layoutX="590.0" layoutY="-5.0" prefHeight="90.0" prefWidth="934.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="64.0" AnchorPane.topAnchor="0.0">
                             <children>
-                                <Button fx:id="search" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleSearchPerson" prefHeight="25.0" prefWidth="87.0" text="Search">
+                                <Button fx:id="search" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleSearchProduct" prefHeight="25.0" prefWidth="87.0" text="Search">
                                     <HBox.margin>
                                         <Insets left="20.0" top="20.0" />
                                     </HBox.margin>
@@ -42,7 +42,7 @@
                                         <Insets left="20.0" top="20.0" />
                                     </HBox.margin>
                                 </Button>
-                                <Button fx:id="update" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleEditPerson" prefWidth="111.0" text="Update">
+                                <Button fx:id="update" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleEditProduct" prefWidth="111.0" text="Update">
                                     <HBox.margin>
                                         <Insets left="20.0" top="20.0" />
                                     </HBox.margin>
